--- a/index.html
+++ b/index.html
@@ -41,10 +41,25 @@
 
     <main class="main">
       <section class="cover overlay">
-        <h1 class="cover__title">оно тебе надо</h1>
+
+        <h1 class="cover__title">
+          <!--ОНО-->
+          <span>
+            о<span class="letter-spacing-extended">н</span><span class="no-letter-spacing">о</span>
+          </span> 
+          <!--ТЕБЕ-->
+          <span class="aligned-text_center">
+            те<span class="letter-spacing-extended">б</span><span class="no-letter-spacing">е</span>
+          </span>
+          <!--НАДО-->
+          <span class="aligned-text_right">
+            <span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span>
+          </span>
+        </h1>
+
         <div class="cover__description">
-          <p class="cover__description-text">Аукцион вещей, вкоторые никто не верил</p>
-          <button class="bet-button"></button>
+          <p class="cover__description-text">Аукцион вещей, в которые никто не верил</p>
+          <button class="bet-button">Сделать ставку</button>
         </div>
       </section>
 
