--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
       <nav class="header__menu">
         <ul class="header__links-list">
           <li class="header__links-list-item">
-            <a href="#">главная</a>
+            <a class="header__link header__link_active" href="#">главная</a>
           </li>
           <li class="header__links-list-item">
-            <a href="#">посмотреть лоты</a>
+            <a class="header__link" href="#">посмотреть лоты</a>
           </li>
           <li class="header__links-list-item">
-            <a href="#">об аукционе</a>
+            <a class="header__link" href="#">об аукционе</a>
           </li>
         </ul>
       </nav>
@@ -146,13 +146,13 @@
       <nav class="footer__menu">
         <ul class="footer__menu-list">
           <li class="footer__menu-list-item">
-            <a href="#">главная</a>
+            <a class="footer__menu-link footer__menu-link_active" href="#">главная</a>
           </li>
           <li class="footer__menu-list-item">
-            <a href="#">посмотреть лоты</a>
+            <a class="footer__menu-link" href="#">посмотреть лоты</a>
           </li>
           <li class="footer__menu-list-item">
-            <a href="#">об аукционе</a>
+            <a class="footer__menu-link" href="#">об аукционе</a>
           </li>
         </ul>
       </nav>
