--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-    <link rel="stylesheet" href="/fonts/fonts.css" />
-    <link rel="stylesheet" href="/styles/global.css" />
-    <link rel="stylesheet" href="/styles/style.css" />
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
     <header class="header">
@@ -27,7 +27,7 @@
       <a class="header__logo-link" href="#">
         <img
           class="header__logo-image"
-          src="/images/logo-black.svg"
+          src="./images/logo-black.svg"
           alt="Логотип сайта Оно тебе надо"
         />
       </a>
@@ -111,7 +111,7 @@
         <div class="about__logo">
           <img
             class="about__logo-image"
-            src="/images/logo-white.svg"
+            src="./images/logo-white.svg"
             alt="логотип сайта Оно тебе надо на черном фоне"
           />
         </div>
@@ -161,7 +161,7 @@
           <a class="footer__social-link" href="#">
             <img
               class="footer__social-icon footer__social-icon_youtube"
-              src="/images/yt.svg"
+              src="./images/yt.svg"
               alt="ссылка на ютуб канал"
             />
           </a>
@@ -170,7 +170,7 @@
           <a class="footer__social-link" href="#">
             <img
               class="footer__social-icon footer__social-icon_vk"
-              src="/images/vk.svg"
+              src="./images/vk.svg"
               alt="ссылка на группу вконтакте"
             />
           </a>
@@ -179,7 +179,7 @@
           <a class="footer__social-link" href="#">
             <img
               class="footer__social-icon footer__social-icon_pt"
-              src="/images/pinterest.svg"
+              src="./images/pinterest.svg"
               alt="ссылка на pinterest"
             />
           </a>
