--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-    <link rel="stylesheet" href="./fonts/fonts.css" />
-    <link rel="stylesheet" href="./styles/global.css" />
-    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./fonts/fonts.css">
+    <link rel="stylesheet" href="./styles/global.css">
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
+
+    <!-- Шапка сайта -->
+
     <header class="header">
       <nav class="header__menu">
         <ul class="header__links-list">
@@ -29,21 +32,26 @@
           class="header__logo-image"
           src="./images/logo-black.svg"
           alt="Логотип сайта Оно тебе надо"
-        />
+        >
       </a>
       <div class="header__address">
         <address class="address">
           <a href="tel:+99995555555">+9 999 555 5555</a>
           <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
           <p>
-            наб. Принсенграхт 263-<br />
+            наб. Принсенграхт 263-<br>
             265, Амстердам
           </p>
         </address>
       </div>
     </header>
 
+    <!-- Конце шапки сайта -->
+
     <main class="main">
+
+      <!-- Секция "Обложка Оно тебе надо(cover)"-->
+
       <section class="cover overlay">
         <h1 class="cover__title">
           <!--ОНО-->
@@ -65,6 +73,10 @@
           <button class="bet-button">Сделать ставку</button>
         </div>
       </section>
+
+      <!-- Конец секции "Обложка Оно тебе надо"(cover)-->
+
+      <!-- Секция "Лоты"(lots)-->
 
       <section class="lots">
         <h2 class="lots__heading">лоты</h2>
@@ -107,13 +119,17 @@
         <a class="lots__look-more-link" href="#">посмотреть больше</a>
       </section>
 
+      <!-- Конец секции "Лоты"(lots)-->
+
+      <!-- Секция "Об аукционе"(about)-->
+
       <section class="about">
         <div class="about__logo">
           <img
             class="about__logo-image"
             src="./images/logo-white.svg"
             alt="логотип сайта Оно тебе надо на черном фоне"
-          />
+          >
         </div>
         <h2 class="about__title">Об аукционе</h2>
         <div class="about__column">
@@ -132,14 +148,19 @@
           </p>
         </div>
       </section>
+
+      <!-- Конец секции "Об аукционе"(about)-->
+
     </main>
+
+    <!-- Подвал сайта (footer) -->
 
     <footer class="footer">
       <address class="address footer__address">
         <a href="tel:+99995555555">+9 999 555 5555</a>
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <p>
-          наб. Принсенграхт 263-<br />
+          наб. Принсенграхт 263-<br>
           265, Амстердам
         </p>
       </address>
@@ -163,7 +184,7 @@
               class="footer__social-icon footer__social-icon_youtube"
               src="./images/yt.svg"
               alt="ссылка на ютуб канал"
-            />
+            >
           </a>
         </li>
         <li class="footer__social-list-item">
@@ -172,7 +193,7 @@
               class="footer__social-icon footer__social-icon_vk"
               src="./images/vk.svg"
               alt="ссылка на группу вконтакте"
-            />
+            >
           </a>
         </li>
         <li class="footer__social-list-item">
@@ -181,10 +202,13 @@
               class="footer__social-icon footer__social-icon_pt"
               src="./images/pinterest.svg"
               alt="ссылка на pinterest"
-            />
+            >
           </a>
         </li>
       </ul>
     </footer>
+
+    <!-- Конец подвала сайта (footer) -->
+
   </body>
 </html>
