Исправления после ревью 1

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           </li>
         </ul>
       </nav>
-      <a class="header__logo-link" href="#">
+      <a class="header__logo-link">
         <img
           class="header__logo-image"
           src="./images/logo-black.svg"
@@ -70,7 +70,7 @@
 
         <div class="cover__description">
           <p class="cover__description-text">Аукцион вещей, в которые никто не верил</p>
-          <button class="bet-button">Сделать ставку</button>
+          <button class="bet-button" type="button">Сделать ставку</button>
         </div>
       </section>
 
@@ -83,36 +83,42 @@
         <ul class="lots__card-list">
           <li class="lots__card-list-item card card_type_film">
             <a class="card-link" href="#">
-              <h3 class="card__title">Фильм режиссёра, который бросил киношколу</h3>
-              <p class="card__text">
+              <article class="card__wrapper">
+                <h3 class="card__title">Фильм режиссёра, который бросил киношколу</h3>
+                <p class="card__text">
                 Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не
                 знали, что режиссёр — Пол Томас Андерсон?
-              </p>
+                </p>
+              </article>
             </a>
           </li>
           <li class="lots__card-list-item card card_type_book">
             <a class="card-link" href="#">
-              <h3 class="card__title">
-                Книга, где описан один скучный день из жизни рекламного агента
-              </h3>
-              <p class="card__text">
-                Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на
-                древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории
-                литературы, начиная с античных времён. И это всё накладывается на эпическую поэму
-                Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?
-              </p>
+              <article class="card__wrapper">
+                <h3 class="card__title">
+                  Книга, где описан один скучный день из жизни рекламного агента
+                </h3>
+                <p class="card__text">
+                  Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на
+                  древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории
+                  литературы, начиная с античных времён. И это всё накладывается на эпическую поэму
+                  Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?
+                </p>
+              </article>
             </a>
           </li>
           <li class="lots__card-list-item card card_type_picture">
             <a class="card-link" href="#">
-              <h3 class="card__title">
-                Картина, которую повторит даже 5-летний сын маминой подруги
-              </h3>
-              <p class="card__text">
-                Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на
-                инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое
-                поставили, если бы не знали, что это — одна из революционных работ Кандинского?
-              </p>
+              <article class="card__wrapper">
+                <h3 class="card__title">
+                  Картина, которую повторит даже 5-летний сын маминой подруги
+                </h3>
+                <p class="card__text">
+                  Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на
+                  инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое
+                  поставили, если бы не знали, что это — одна из революционных работ Кандинского?
+                </p>
+              </article>
             </a>
           </li>
         </ul>
@@ -179,27 +185,27 @@
       </nav>
       <ul class="footer__social-list">
         <li class="footer__social-list-item">
-          <a class="footer__social-link" href="#">
+          <a class="footer__social-link" href="#" target="_blank">
             <img
-              class="footer__social-icon footer__social-icon_youtube"
+              class="footer__social-icon"
               src="./images/yt.svg"
               alt="ссылка на ютуб канал"
             >
           </a>
         </li>
         <li class="footer__social-list-item">
-          <a class="footer__social-link" href="#">
+          <a class="footer__social-link" href="#" target="_blank">
             <img
-              class="footer__social-icon footer__social-icon_vk"
+              class="footer__social-icon"
               src="./images/vk.svg"
               alt="ссылка на группу вконтакте"
             >
           </a>
         </li>
         <li class="footer__social-list-item">
-          <a class="footer__social-link" href="#">
+          <a class="footer__social-link" href="#" target="_blank">
             <img
-              class="footer__social-icon footer__social-icon_pt"
+              class="footer__social-icon"
               src="./images/pinterest.svg"
               alt="ссылка на pinterest"
             >
